# cadenza

./: Cargo.toml  LICENSE  README.md
docs/plans/: 2026-03-11-visualizer-flow-design.md  2026-03-11-visualizer-flow.md
src/: analysis.rs  app.rs  audio.rs  catalog.rs  cli.rs  download.rs  lib.rs  library.rs  main.rs  player.rs  ui.rs
tests/: analysis_fft.rs  audio_decode.rs  catalog_parse.rs  cli_smoke.rs  download_plan.rs  library_scan.rs  playback_controls.rs  player_window.rs  ui_render.rs  ui_state.rs
