[package]
name = "cadenza"
version = "0.1.1"
edition = "2024"
description = "A terminal-first classical music player and visualizer built in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Qi-Zhan/cadenza"
keywords = ["audio", "music", "terminal", "visualizer", "tui"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
crossterm = "0.28"
ratatui = "0.29"
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
symphonia = { version = "0.5.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.15"
